Fix: Update tmux.conf, theme had new version with breaking changes.

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -1,3 +1,4 @@
+# Basic TMUX config
 # Set true color
 set-option -sa terminal-overrides ",xterm*:Tc"
 
@@ -29,7 +30,7 @@ bind % split-window -h -c "#{pane_current_path}"
 
 setw -g mode-keys vi
 
-# List of plugins
+# TPM Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -37,31 +38,38 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'alexwforsythe/tmux-which-key' # prefix + space
+set -g @plugin 'omerxx/tmux-sessionx' # prefix + o
 
+# Plugin configs
+set -g @sessionx-bind '/'
+
+# Catppuccin config
 set -g @catppuccin_flavor 'macchiato' # latte frappe, macchiato, mocha
 
-# Config 3
-set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+# Catppuccin Windows - Global
+set -g @catppuccin_window_status_style 'rounded'
+set -g @catppuccin_window_number_position 'left'
+set -g @catppuccin_window_default_text '#W'
+set -g @catppuccin_window_text ' #{window_name}'
+#set -g @catppuccin_window_left_separator " "
+#set -g @catppuccin_window_right_separator " "
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# Catppuccin Windows - Current
+set -g @catppuccin_window_current_fill 'number'
+set -g @catppuccin_window_current_text ' #[bold]#W'
+#set -g @catppuccin_window_current_color '#{E:@thm_surface_2}'
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory session"
-# set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_left_separator " "
+# Catppuccin Status
+set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+# Set left and right status bar
+set -g status-left-length 100
+set -g status-right-length 100
+#set -g status-left '#{E:@catppuccin_} '
+set -g status-right '#{E:@catppuccin_status_directory}#{E:@catppuccin_status_session}'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
