--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -73,43 +73,6 @@ general {
     allow_tearing = false
 }
 
-decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
-    rounding = 10
-    
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-    }
-
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = $base
-    }
-}
-
-animations {
-    enabled = yes
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    bezier = liner, 1, 1, 1, 1
-
-    animation = windows, 1, 3, myBezier
-    animation = windowsOut, 1, 3, default, popin 80%
-    # animation = border, 1, 10, default
-    # animation = borderangle, 1, 8, default
-    animation = border, 1, 3, liner
-    animation = borderangle, 1, 30, liner, loop
-    animation = fade, 1, 3, default
-    animation = workspaces, 1, 3, default
-}
-
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -123,7 +86,11 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = on
+    gesture = 3, horizontal, workspace
+    gesture = 3, up, fullscreen
+    #gesture = 3, down, float
+    workspace_swipe_distance = 300
+    workspace_swipe_create_new = true
 }
 
 misc {
@@ -153,3 +120,4 @@ source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/workspaces.conf
 source = ~/.config/hypr/keybindings.conf
 source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/power_hungry.conf
