--- a/files/waybar/config.jsonc
+++ b/files/waybar/config.jsonc
@@ -33,7 +33,7 @@
     "format-charging": " {capacity}% ({time})",
     "format-charging-full": " {capacity}%",
     "format-full": "{icon} {capacity}%",
-    "format-alt": "{icon} {power}W",
+    //"format-alt": "{icon} {power}W",
     "format-icons": ["", "", "", "", ""],
     "tooltip": false,
     "on-click": "$HOME/.local/bin/send_notify --name power",
@@ -50,9 +50,9 @@
       "on-scroll": 1,
       "on-click-right": "mode",
       "format": {
-        "months": "<span color='#ffead3'><b>{}</b></span>",
-        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
-        "today": "<span color='#ff6699'><b>{}</b></span>",
+        "months": "<span color='#7dc4e4'><b>{}</b></span>",
+        "weekdays": "<span color='#cad3f5'><b>{}</b></span>",
+        "today": "<span color='#ed8796'><b>{}</b></span>",
       },
     },
     "actions": {
