Update: Move sources up

--- a/files/hypr/hyprland.conf
+++ b/files/hypr/hyprland.conf
@@ -33,6 +33,15 @@ exec-once=hyprctl setcursor Adwaita 24
 # source = ~/.config/hypr/myColors.conf
 source = ~/.config/hypr/macchiato.conf
 
+# Source conf files
+
+source = ~/.config/hypr/environment.conf
+source = ~/.config/hypr/keybindings.conf
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/power_hungry.conf
+source = ~/.config/hypr/windowrules.conf
+source = ~/.config/hypr/workspaces.conf
+
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
@@ -84,14 +93,10 @@ master {
     # new_is_master = true
 }
 
-gestures {
+#gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    gesture = 3, horizontal, workspace
-    gesture = 3, up, fullscreen
-    #gesture = 3, down, float
-    workspace_swipe_distance = 300
-    workspace_swipe_create_new = true
-}
+#workspace_swipe = on
+#}
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -112,12 +117,3 @@ device{
 xwayland {
     force_zero_scaling = true
 }
-
-# Source conf files
-
-source = ~/.config/hypr/environment.conf
-source = ~/.config/hypr/windowrules.conf
-source = ~/.config/hypr/workspaces.conf
-source = ~/.config/hypr/keybindings.conf
-source = ~/.config/hypr/monitors.conf
-source = ~/.config/hypr/power_hungry.conf
