Fix: Updated to latest hyprland release config syntax

--- a/files/hypr/hyprpaper.conf
+++ b/files/hypr/hyprpaper.conf
@@ -1,5 +1,6 @@
-# preload = ~/Pictures/wallpapers/bliss 600dpi.jpg
-preload = ~/Pictures/wallpapers/default.jpg
-# wallpaper = ,~/Pictures/wallpapers/bliss 600dpi.jpg
-wallpaper = ,~/Pictures/wallpapers/default.jpg
-splash = true
+wallpaper {
+    monitor = 
+    path = ~/Pictures/Wallpapers/default.jpg
+    fit_mode = cover # default
+}
+splash = false
