--- a/files/hypr/workspaces.conf
+++ b/files/hypr/workspaces.conf
@@ -5,13 +5,60 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
 
-windowrulev2 = workspace 1, class:^(kitty)$
-windowrulev2 = workspace 2, class:^(org.gnome.Nautilus)$
-windowrulev2 = workspace 2, class:^(io.github.celluloid_player.Celluloid)$
-windowrulev2 = workspace 3, class:^(firefox)$
-windowrulev2 = workspace 4, class:^(looking-glass-client)$
-windowrulev2 = workspace 5, class:^([Ss]team)$, title:^((?!notificationtoasts_2_desktop).)*$
-windowrulev2 = workspace 6, class:^(discord)$
-windowrulev2 = workspace 7, class:^(org.mozilla.Thunderbird)$
-windowrulev2 = workspace 8, class:^(com.obsproject.Studio)$
-windowrulev2 = workspace 9, class:^(localsend)$
+windowrule {
+  name = kitty-1
+  match:class = kitty
+
+  workspace = 1
+}
+
+windowrule {
+  name = nautilus-2
+  match:class = org.gnome.Nautilus
+
+  workspace = 2
+}
+
+windowrule {
+  name = firefox-3
+  match:class = firefox
+
+  workspace = 3
+}
+
+#windowrulev2 = workspace 5, class:^([Ss]team)$, title:^((?!notificationtoasts_2_desktop).)*$
+windowrule {
+  name = steam-5
+  match:class = ^([Ss]team)$
+  match:title = title:^((?!notificationtoasts_2_desktop).)*$
+
+  workspace = 5
+}
+
+windowrule {
+  name = discord-6
+  match:class = discord
+
+  workspace = 6
+}
+
+windowrule {
+  name = thunderbird-7
+  match:class = org.mozilla.Thunderbird
+
+  workspace = 7
+}
+
+windowrule {
+  name = obs-8
+  match:class = com.obsproject.Studio
+
+  workspace = 8
+}
+
+windowrule {
+  name = localsend-9
+  match:class = localsend
+
+  workspace = 9
+}
