--- a/files/hypr/keybindings.conf
+++ b/files/hypr/keybindings.conf
@@ -35,6 +35,7 @@ bind = $mainMod, P, exec, $menu
 
 # Fullscreen
 bind = $mainMod, F, fullscreen
+bind = $mainMod, G, fullscreen
 
 # Move focus with mainMod + vim keys
 # bind = $mainMod, left, movefocus, l
